# LedMatrixInf

./: Cargo.toml  README.md  build.sh  check.sh
src/: get_vgn.rs  main.rs
