[package]
name = "led_matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.22.1"
rpi-led-panel = "0.2.0"
embedded-graphics = "0.7.1"
argh = "0.1.9"
[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-gcc"

